# rk_mpp_demo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/rk_mpp_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/3rd/ffmpeg/include/libavutil/: ffversion.h
app/src/main/cpp/mpp/: MppDecoder264.cpp  MppDecoder264.h  MppEncoder264.cpp  MppEncoder264.h
app/src/main/cpp/mpp/bak/: MppEncoder264.cpp
app/src/main/cpp/utils/: ZYCommon.h  ZYLog.cpp  ZYLog.h  ZYTensor.h  ZYThread.h  ZYTimer.h
app/src/main/java/com/example/rk_mpp_test/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rk_mpp_test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
